# bluebox-sdk

./: .pylintrc  CLAUDE.md  PLAN_async_interaction_monitor.md  README.md  interpolation-migration-plan.md  ip_test_routine.json  llm_context_manager.py  llm_context_manager_cli.py  output.txt  phase3-CLI-specialists.md  pyproject.toml  quickstart.py  quickstart_cli.py  specialists_plan.md  specialists_plan_step2.md  test.py  window_properties.py
bluebox/: __init__.py
example_routines/: amtrak_one_way_train_search_routine.json  jet_blue_input.json  jetblue_one_way_flight_search.json  massachusetts_corp_search_routine.json
legacy-web-hacker/: README.md  pyproject.toml
legacy-web-hacker/web_hacker/: __init__.py
output/: Atomics.json  CSS.json  DevToolsAPI.json  DevToolsHost.json  Elements.json  Emulation.json  Extensions.json  GPUBufferUsage.json  GPUColorWrite.json  GPUMapMode.json  GPUShaderStage.json  GPUTextureUsage.json  Host.json  InspectorFrontendAPI.json  InspectorFrontendHost.json  Main.json  MobileThrottling.json  Protocol.json  ProtocolClient.json  QSI.json  UI.json  WebAssembly.json  __core-js_shared__.json  _qsie.json  chrome.json  console.json  cookieStore.json  customElements.json  dataLayer.json  exports.json  external.json  gaGlobal.json  google_tag_data.json  google_tag_manager.json  jQuery361053639817415354451.json  jQuery361074058757280353391.json  jQuery371053269243926709651.json  jQuery371071655011918650271.json  launchQueue.json  litPropertyMetadata.json  (+23 more)
output_test/: Atomics.json  CSS.json  GPUBufferUsage.json  GPUColorWrite.json  QSI.json  (+42 more)
(+175 files in other folders)
